# retail_recognition

./: CMakeLists.txt  README.md  package.xml
databases/aisle_signs/: sign_label_list1.txt
databases/products/: product_list1.txt
launch/: README.md  bringup_shelf_product_recognition.launch  bringup_sign_recognition.launch  bringup_usb_cam.launch
src/: CaptLabel.h  SignLabel.cpp  SignLabel.h  shelf_product_recognition_node.cpp  sign_recognition_node.cpp
